--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.App {
+  background-image: url('./Components/swBG.jpg');
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  background-size: cover;
+  background-position: center;
+}
